--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 { correct: "дистанция", options: ["дистанция", "дистанцыя", "дестанция"] },
                 { correct: "дистанционный", options: ["дистанционный", "дистанционый", "дестанционный"] },
                 { correct: "дисциплина", options: ["дисциплина", "дисцеплина", "дисцыплина"] },
-                { correct: "желание", options: ["желание", "желанье", "жылание"] },
+                { correct: "желание", options: ["желание", "желание", "жылание"] },
                 { correct: "желать", options: ["желать", "жылать", "жилать"] },
                 { correct: "жираф", options: ["жираф", "жыраф", "жераф"] },
                 { correct: "жокей", options: ["жокей", "жоккей", "жакей"] },
@@ -411,4 +411,5 @@
     </script>
 </body>
 </html>
+
 
